test/errors/function_redeclaration.correct
error: function_redeclaration.li:5:4: function 'test' is already declared in this scope
│ fn test() {
│ ~~~~~~~~~~~
│    ^
